Sat Oct 23 00:20:55 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/zlib/zlib.c (zstream_append_input): clear klass for z->input
	  to avoid potential vulnerability.

	* ext/zlib/zlib.c (zstream_run): always use zstream_append_input()
	  to avoid SEGV.  [ruby-dev:24568]

Fri Oct 22 12:02:28 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_alias): was warning for wrong condition.
	  [ruby-dev:24565]

Fri Oct 22 10:36:37 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httprequest.rb (WEBrick::HTTPRequest#meta_vars):
	  should check if path_info is not nil.

Fri Oct 22 00:22:31 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/zlib/zlib.c (zstream_shift_buffer): should restore class
	  field of a buffer.  [ruby-dev:24562]

Fri Oct 22 00:20:33 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_include): should not treat char as negative value.
	  [ruby-dev:24558]

Thu Oct 21 19:06:15 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httpresponse.rb (WEBrick::HTTPResponse#send_body_io):
	  ensure to close @body. (http://bugs.debian.org/277520)

Thu Oct 21 13:11:31 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* io.c (pipe_open): variable name "fpw" is conflicted.

Thu Oct 21 00:36:41 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_alias): should warn on method discarding.
	  [ruby-dev:24546]

	* ext/zlib/zlib.c (zstream_expand_buffer_into): hide internal
	  string buffer by clearing klass.  [ruby-dev:24548]

	* parse.y (lex_getline): should not touch ruby_debug_lines if
	  RIPPER is defined.  [ruby-dev:24547]

Wed Oct 20 19:45:13 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (str_gsub): 	reentrant check.  [ruby-dev:24432]

Wed Oct 20 12:42:53 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_getline): rs modification check should not interfere
	  in the loop.

Wed Oct 20 10:31:33 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>
